# robocar_bot

./: .gitignore  README.md
src/robocar_bot_bringup/: CMakeLists.txt  package.xml
src/robocar_bot_bringup/launch/: robocar_bot_bringup.launch.py
src/robocar_bot_controller/: CMakeLists.txt  package.xml
src/robocar_bot_controller/config/: robocar_bot_controller.yaml
src/robocar_bot_controller/launch/: controller.launch.py
src/robocar_bot_description/: CMakeLists.txt  package.xml
src/robocar_bot_description/config/: gz_bridge.yaml
src/robocar_bot_description/launch/: display.launch.py  gazebo.launch.py
src/robocar_bot_description/meshes/world/: asfalto_chao.mtl  chao.mtl  direita.mtl  esquerda.mtl  faixa_amarela.mtl  faixa_branca.mtl  frente.mtl  novo_teste.mtl  quarteirao.mtl  robocar_master_noarray.mtl
src/robocar_bot_description/rviz/: robocar_bot_viz.rviz
src/robocar_bot_description/urdf/: robocar_bot.urdf  robocar_bot_gazebo.xacro  robocar_bot_ros2_control.xacro  turtlebot3_burger.urdf
src/robocar_bot_description/worlds/: robocar_map.sdf
src/traffic_light_sim/: CMakeLists.txt  package.xml
src/traffic_light_sim/launch/: traffic_light.launch.py
src/traffic_light_sim/models/traffic_light/: model.config  model.sdf
src/traffic_light_sim/src/: traffic_light_plugin.cpp
src/traffic_light_sim/worlds/: traffic_light.world
